--- a/tests/html/simple.html
+++ b/tests/html/simple.html
@@ -8,12 +8,12 @@
         <div>
             What is your game
             <div>
-                I'm not certain
+                I'm not certain 1
             </div>
         </div>
-        <a href="http://example.com">Link 1</a>
-        <a href="http://example.com">Link 2</a>
-        <a href="http://example.com">
+        <a href="http://example.com/1">Link 1</a>
+        <a href="http://example.com/3">Link 2</a>
+        <a href="http://example.com/4">
             Link 3
         </a>
         <div id="google">
